# grc_gateway

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/grc/: __init__.py  __main__.py  dunders.py
src/grc/plugins/cli/: __init__.py  abstract.py  application.py
src/grc/plugins/logging/: __init__.py  abstract.py  filters.py  utils.py
src/grc/plugins/network/: __init__.py  abstract.py
src/grc/plugins/plugins/: __init__.py  abstract.py  cli.py  command.py  commands.py  filters.py  loader.py
src/grc/plugins/serialization/: __init__.py  abstract.py  io.py  io.pyi
src/grc/plugins/webserver/: __init__.py  abstract.py  application.py  cli.py  command.py  commands.py
tests/: test_serialization.py
